bpo-35943: Prevent PyImport_GetModule() from returning a partially-initialized module (GH-15057)